# CBase

./: CMakeLists.txt  WORKSPACE  sftp-config.json
bitthings/: unionTest.cc
constThings/: CMakeLists.txt  constdemo.cc  constfunc.cc  whiledemo.cpp
docs/: C++.drawio  C++面向对象.md  C实现C++面向对象的特性.md  assertThings.md  bitThings.md  const.md  decltypethings.md  inlinethings.md  sizeofThings.md  staticThings.md  structThings.md  thisThings.md  volatilethings.MD  友元函数和有缘类.md  宏那些事.md  引用与指针.md  深入浅出C++虚函数的vptr与vtable.md  纯虚函数和抽象类.md
friendthing/: friendfunc.cc
func/: CMakeLists.txt  funcpointer.cc  futureandpromise.cc  futureandpromisedemo2.cc  is_type.cc  packaged_task_demo.cpp  pair_and_tuple.cc  productandcustom.cc  regex_demo.cc  simple_cal_time.cc
inlineThings/: CMakeLists.txt  MapAndVec.cpp  StringDemo.cpp  TemplateDemo.cpp  expectedemo.cc  inlinevirtual.cc
macrothings/: macrodemo.cc  macrolink.cc
part_time/: CMakeLists.txt  befor_main.cc  conversion.cc  delegation.cc  functionlike.cc  ifelse.cpp  linklist.cc  offset.cc  stringdemo.cc  templatedemo.cc  vtbl.cc
sizeofThings/: CMakeLists.txt  fileoperatoriterator.cpp  multimetux.cc  mutexdemo.cc  ostreamiteratordemo.cpp  reference.cc  sizeofdemo.cc  smartpointer.cpp  test.txt  threadreturnres.cc  threadtask.cpp  threadtransparams.cpp  vptabledemo.cpp  vptrdemo.cpp
staticThings/: CMakeLists.txt  ConstDemo.cpp  GetLineDemo.cpp  ReadUnknownString.cc  VoidPoint.cpp  typeDemo.cpp
structthings/: basestruct.c  basestructcpp.cc  cmakevirtual.c
virtualfunc/: CMakeLists.txt  FuncReturnList.cpp  InitialiterList.cpp  (+6 more)
(+9 files in other folders)
