add_executable(ostreamiteratordemo ostreamiteratordemo.cpp)
add_executable(fileopeartoriterator fileoperatoriterator.cpp)
add_executable(smartpointer smartpointer.cpp)
add_executable(threadtask threadtask.cpp)
add_executable(threadtransparams threadtransparams.cpp)
add_executable(threadreturnres threadreturnres.cc)
add_executable(vptrdemo vptrdemo.cpp)
add_executable(vptabledemo vptabledemo.cpp)
add_executable(reference reference.cc)
add_executable(mutexdemo mutexdemo.cc)
add_executable(multimetux multimetux.cc)